# omnigraph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  README.md  SECURITY.md  WAL-thinking.md  buildspec.package.yml  issues.md  lance-memwal-pr.md  og-cheet-sheet.md  omnigraph.example.yaml  omnigraph.yaml  openapi.json  policy-line.md  tf-update.md  wal-options.md
.context/scratch/merge-insert-cas-repro/: Cargo.toml
.context/scratch/merge-insert-cas-repro/src/: lib.rs
crates/omnigraph/: Cargo.toml
crates/omnigraph-api-types/: Cargo.toml
crates/omnigraph-api-types/src/: lib.rs
crates/omnigraph-api-types/tests/: schema_equivalence.rs
crates/omnigraph-cli/: Cargo.toml
crates/omnigraph-cli/src/: cli.rs  client.rs  embed.rs  helpers.rs  main.rs  main_tests.rs  migrate.rs  operator.rs  output.rs  planes.rs  read_format.rs  scope.rs  update.rs  version_check.rs
crates/omnigraph-cli/tests/: cli.rs  cli_cluster.rs  cli_cluster_e2e.rs  cli_cross_backend_walk.rs  cli_cross_process.rs  cli_data.rs  cli_dst_parity.rs  cli_queries.rs  cli_schema_config.rs  crossversion_upgrade.rs  parity_matrix.rs  system_local.rs  system_remote.rs  update.rs
crates/omnigraph-cli/tests/support/: mod.rs
crates/omnigraph-cluster/: Cargo.toml
crates/omnigraph-cluster/src/: config.rs  diff.rs  failpoints.rs  lib.rs  serve.rs  store.rs  sweep.rs  tests.rs  types.rs
crates/omnigraph-cluster/tests/: failpoints.rs  s3_cluster.rs
crates/omnigraph-compiler/: Cargo.toml
crates/omnigraph-compiler/src/: embedding.rs  embedding_models.rs  error.rs  json_output.rs  lib.rs  query_input.rs  result.rs  types.rs
crates/omnigraph-compiler/src/catalog/: mod.rs  schema_ir.rs  schema_plan.rs  schema_shape.rs  tests.rs
crates/omnigraph-compiler/src/ir/: lower.rs  lower_tests.rs  mod.rs
crates/omnigraph-compiler/src/lint/: codes.rs  diagnostic.rs  mod.rs
crates/omnigraph-compiler/src/query/: ast.rs  lint.rs  lint_tests.rs  mod.rs  parser.rs  parser_tests.rs  query.pest  typecheck.rs  typecheck_tests.rs
crates/omnigraph-compiler/src/schema/: ast.rs  mod.rs  parser.rs  parser_tests.rs  schema.pest
crates/omnigraph-config/: Cargo.toml
crates/omnigraph-config/src/: lib.rs  merge.rs
crates/omnigraph-dst/: Cargo.toml
crates/omnigraph-dst/src/: backend.rs  cohort.rs  convergence.rs  fault.rs  invariants.rs  lib.rs  model.rs  op.rs
crates/omnigraph-engine/: Cargo.toml
crates/omnigraph-engine/src/plan/: node_scan.rs  planner.rs
crates/omnigraph-mcp/: Cargo.toml
crates/omnigraph-mcp/src/: lib.rs  service.rs  transport.rs
crates/omnigraph-mcp/tests/: standalone.rs
crates/omnigraph-policy/: Cargo.toml
crates/omnigraph-policy/src/: lib.rs
crates/omnigraph-queries/: Cargo.toml
crates/omnigraph-queries/src/: lib.rs
crates/omnigraph-repo/: Cargo.toml
crates/omnigraph-repo/src/: error.rs  lib.rs  repo.rs
crates/omnigraph-server/: Cargo.toml
crates/omnigraph-server/examples/: bench_actor_isolation.rs  bench_concurrent_http.rs
crates/omnigraph-server/src/: api.rs  auth.rs  config.rs  graph_id.rs  handlers.rs  identity.rs  lib.rs  main.rs  mcp.rs  policy.rs  queries.rs  registry.rs  request_id.rs  settings.rs  workload.rs
crates/omnigraph-server/src/mcp/: builtins.rs  mod.rs
crates/omnigraph-server/tests/: auth_policy.rs  boot_settings.rs  data_routes.rs  mcp.rs  multi_graph.rs  openapi.rs  s3.rs  schema_routes.rs  server.rs  stored_queries.rs
crates/omnigraph-server/tests/support/: mod.rs
crates/omnigraph/benches/: scenarios.rs
crates/omnigraph/benches/scenarios/: child_protocol.rs  rfc023.rs  rfc023_limits.rs
crates/omnigraph/examples/: bench_expand.rs
crates/omnigraph/src/: blob_descriptor.rs  branch_control.rs  dst.rs  embedding.rs  error.rs  failpoints.rs  instrumentation.rs  lance_access.rs  lib.rs  runtime_cache.rs  storage.rs  storage_layer.rs  table_store.rs  validate.rs
crates/omnigraph/src/changes/: mod.rs
crates/omnigraph/src/db/: commit_graph.rs  graph_coordinator.rs  manifest.rs  mod.rs  omnigraph.rs  recovery_audit.rs  run_registry.rs  schema_state.rs  write_queue.rs
crates/omnigraph/src/exec/: merge.rs  mod.rs  mutation.rs  projection.rs  query.rs  staging.rs
crates/omnigraph/tests/: agent_lifecycle.rs  aggregation.rs  benchmark_scenario_contract.rs  branch_control_cost.rs  branching.rs  changes.rs  checkpoint_retention_cost.rs  composite_flow.rs  consistency.rs  cross_process_writes.rs  dst.rs  dst_recovery.rs  durable_head_lookup_cost.rs  end_to_end.rs  export.rs  failpoint_names_guard.rs  failpoints.rs  forbidden_apis.rs  lance_surface_guards.rs  lance_version_columns.rs  lifecycle.rs  lineage_projection.rs  literal_filters.rs  maintenance.rs  memwal_enrollment_gate.rs  memwal_stream.rs  memwal_stream_cost.rs  merge_cost.rs  merge_fast_forward.rs  merge_truth_table.rs  ordering.rs  performance_invariants.rs  point_in_time.rs  policy_engine_chassis.rs  proptest_equivalence.rs  recovery.rs  runs.rs  s3_storage.rs  scalar_indexes.rs  schema_apply.rs  (+9 more)
research/lance-autoresearch/: .gitignore  Cargo.toml  HARNESS.md  LICENSE-APACHE  LICENSE-MIT  README.md  program.md
research/lance-autoresearch/benches/: pq_l2.rs
research/lance-autoresearch/docs/: adding-a-target.md  design.md
research/lance-autoresearch/scripts/: prepare_fixtures.sh
research/lance-autoresearch/src/: fixture.rs  inputs.rs  kernels.rs  lib.rs  reference.rs
validation-prototypes/: Cargo.toml
validation-prototypes/custom-lance-index/: Cargo.toml
validation-prototypes/custom-lance-index/src/: main.rs
validation-prototypes/custom-operator/: Cargo.toml
validation-prototypes/custom-operator/src/: main.rs
validation-prototypes/factorized-batches/: Cargo.toml  sample-output.txt
validation-prototypes/factorized-batches/src/: data.rs  main.rs  ops.rs
validation-prototypes/sip-format-bench/: Cargo.toml
validation-prototypes/sip-format-bench/src/: main.rs
validation-prototypes/stable-rowid-index/: Cargo.toml
validation-prototypes/stable-rowid-index/src/: main.rs
(+440 files in other folders)
