[workspace]
resolver = "2"
# The vendored patched crate is a [patch.crates-io] path source, not a
# workspace member (see the patch section at the bottom of this file).
exclude = ["vendor/lance-table"]
members = [
    "crates/omnigraph-compiler",
    "crates/omnigraph",
    "crates/omnigraph-cli",
    "crates/omnigraph-api-types",
    "crates/omnigraph-cluster",
    "crates/omnigraph-policy",
    "crates/omnigraph-server",
    "crates/omnigraph-dst",
]
default-members = [
    "crates/omnigraph",
    "crates/omnigraph-cli",
    "crates/omnigraph-server",
]

[workspace.dependencies]
arrow-array = "58"
arrow-ipc = "58"
arrow-schema = "58"
arrow-select = "58"
arrow-cast = { version = "58", features = ["prettyprint"] }
arrow-ord = "58"

datafusion = { version = "53", default-features = false, features = ["nested_expressions"] }
datafusion-physical-plan = "53"
datafusion-physical-expr = "53"
datafusion-execution = "53"
datafusion-common = "53"
datafusion-expr = "53"
datafusion-functions-aggregate = "53"

lance = { version = "7.0.0", default-features = false, features = ["aws"] }
lance-core = "7.0.0"
lance-datafusion = "7.0.0"
lance-file = "7.0.0"
lance-index = "7.0.0"
lance-linalg = "7.0.0"
lance-namespace = "7.0.0"
lance-namespace-impls = "7.0.0"
lance-table = "7.0.0"

ulid = "1"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pest = "2"
pest_derive = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "signal", "sync"] }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
color-eyre = "0.6"
tempfile = "3"
ahash = "0.8"
arc-swap = "1"
base64 = "0.22"
ariadne = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
object_store = { version = "0.13.2", default-features = false, features = ["aws", "fs"] }
fail = "0.5"
time = { version = "0.3", features = ["formatting"] }
axum = { version = "0.8", features = ["json", "macros"] }
utoipa = { version = "5", features = ["axum_extras"] }
url = "2"
cedar-policy = "4.9"
sha2 = "0.10"
subtle = "2"

[profile.dev]
debug = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 16
strip = true

# Vendored lance-table 7.0.0 carrying ONLY the lance#7480 hunk (rowids/index.rs):
# tolerate sparse overlapping stable-row-id chunks so filtered reads survive an
# update-style merge_insert followed by a delete (lance#7444;
# iss-merge-rowid-overlap-corrupts-filtered-reads). Pinned by
# lance_surface_guards.rs::filtered_scan_tolerates_merge_update_row_id_overlap.
# REMOVE vendor/lance-table + this patch at the first Lance bump whose
# lance-table ships lance#7480 (9.0.0, or a backported 8.0.1). Details:
# vendor/lance-table/README.omnigraph.md and docs/dev/lance.md.
[patch.crates-io]
lance-table = { path = "vendor/lance-table" }
