[package]
name = "omnigraph-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for the Omnigraph graph database."
license = "MIT"

[[bin]]
name = "omnigraph"
path = "src/main.rs"

[dependencies]
omnigraph = { path = "../omnigraph", version = "0.1.0" }
omnigraph-compiler = { path = "../omnigraph-compiler", version = "0.1.0" }
clap = { workspace = true }
color-eyre = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
