[package]
name = "omnigraph-dst"
version = "0.8.0"
edition = "2024"
license = "MIT"
description = "Deterministic-simulation (DST) test harness for Omnigraph — shared op alphabet, reference model, and a Backend trait driven across the embedded SDK and the CLI."
publish = false

[dependencies]
omnigraph = { package = "omnigraph-engine", path = "../omnigraph", version = "0.8.0" }
omnigraph-compiler = { path = "../omnigraph-compiler", version = "0.8.0" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
arrow-array = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
