[package]
name = "omnigraph-engine"
version = "0.8.1"
edition = "2024"
description = "Runtime engine for the Omnigraph graph database."
license = "MIT"
repository = "https://github.com/ModernRelay/omnigraph"
homepage = "https://github.com/ModernRelay/omnigraph"
documentation = "https://docs.rs/omnigraph-engine"

[lib]
name = "omnigraph"

[features]
default = []
failpoints = ["dep:fail", "fail/failpoints"]

[dependencies]
omnigraph-compiler = { path = "../omnigraph-compiler", version = "0.8.1" }
omnigraph-policy = { path = "../omnigraph-policy", version = "0.8.1" }
lance = { workspace = true }
lance-core = { workspace = true }
lance-select = { workspace = true }
lance-datafusion = { workspace = true }
datafusion = { workspace = true }
lance-file = { workspace = true }
lance-index = { workspace = true }
lance-linalg = { workspace = true }
lance-namespace = { workspace = true }
lance-table = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-ord = { workspace = true }
arrow-select = { workspace = true }
arrow-cast = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
object_store = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
fail = { workspace = true, optional = true }
time = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
omnigraph-compiler = { path = "../omnigraph-compiler", version = "0.8.1" }
tokio = { workspace = true }
lance-namespace-impls = { workspace = true }
# test-util gates IoStats.requests + assert_io_eq! (failure diagnostics only); dev-dep,
# so production builds (which exclude dev-deps) never see it.
lance-io = { git = "https://github.com/lance-format/lance", rev = "cec0b7dffe2d85c7e66dbe9d1f3891c297903a1d", features = ["test-util"] }
serial_test = "3"
proptest = "1"
syn = { version = "2", features = ["full", "visit"] }
# benches/scenarios.rs only: wait4/rusage peak-RSS + setrlimit memory caps.
libc = "0.2"

[[bench]]
# Scenario benchmark harness — a decision instrument, not a CI gate. One cold
# instrumented subprocess per scenario, JSON lines out. See docs/dev/testing.md
# "Examples & benches". `harness = false`: the file provides its own main.
name = "scenarios"
harness = false
