[workspace]
resolver = "2"
members = [
    "crates/harness-common",
    "crates/pq-l2",
]

# Each per-target crate sets its own deps. Shared deps below pin versions
# uniformly across targets so the workspace lockfile stays clean. Keep this
# list small — only deps actually consumed by ≥2 targets belong here.
[workspace.dependencies]
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1
